--- a/css/timetable.css
+++ b/css/timetable.css
@@ -33,6 +33,7 @@ h1 {
     justify-content: center;
     align-items: center;
     padding: 8px 0;
+    cursor: pointer;
 }
 
 .date {
@@ -47,11 +48,18 @@ h1 {
     line-height: 26px;
 }
 
+.toggle-btn.active {
+    background-color: #00B0C7;
+}
+
 /* タイムテーブル */
+#toggle-table-2 {
+    display: none;
+}
 .timetable {
     width: 96%;
     margin: 8px auto;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: bold;
     line-height: 16px;
     border-collapse: collapse;
@@ -64,7 +72,7 @@ h1 {
 
 .timetable tbody td {
     border-top: 1px solid #000;
-    height: 64px;
+    height: 72px;
 }
 
 .time div {
