--- a/css/timetable.css
+++ b/css/timetable.css
@@ -22,24 +22,32 @@ h1 {
 
 /* トグルボタン */
 .toggle-btn-box {
-    justify-content: space-between;
+    justify-content: center;
+    gap: 16px;
     width: 96%;
     margin: 8px auto;
 }
 
 .toggle-btn {
     width: 47%;
-    background-color: #D9D9D9;
+    max-width: 150px;
+    aspect-ratio: 1 / 1;
+    color: #FF5F00;
+    background-color: #F3DFB4;
     justify-content: center;
     align-items: center;
-    padding: 8px 0;
+    border-radius: 50%;
     cursor: pointer;
+}
+
+.day-count {
+    font-weight: bold;
 }
 
 .date {
     font-size: 32px;
     font-weight: bold;
-    line-height: 32px;
+    line-height: 38px;
 }
 
 .day {
@@ -49,15 +57,18 @@ h1 {
 }
 
 .toggle-btn.active {
-    background-color: #00B0C7;
+    background-color: #FF5F00;
+    color: #fff;
 }
 
 /* タイムテーブル */
 #toggle-table-2 {
     display: none;
 }
+
 .timetable {
     width: 96%;
+    max-width: 960px;
     margin: 8px auto;
     font-size: 12px;
     font-weight: bold;
@@ -84,17 +95,39 @@ h1 {
 
 .artist {
     width: 38%;
-    /* display: flex; */
-    /* justify-content: center; */
 }
 
 .artist div {
     width: 96%;
     height: 56px;
     display: flex;
-    background-color: #D9D9D9;
+    background-color: rgba(168, 209, 235, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    color: #1e707b;
+    cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+    .time div {
+        flex-direction: row;
+        gap: 8px;
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .timetable {
+        font-size: 16px;
+        line-height: 18px;
+    }
+
+    .timetable tbody td {
+        height: 96px;
+    }
+
+    .artist div {
+        height: 72px;
+    }
 }
