--- a/css/contact.css
+++ b/css/contact.css
@@ -10,7 +10,7 @@ h1 {
     margin-bottom: 16px;
 }
 
-form {
+form, .form-confirm {
     display: flex;
     flex-direction: column;
     width: 84%;
@@ -39,11 +39,12 @@ label {
     margin-left: 8px;
 }
 
-select, input, textarea {
+select, input, textarea, p {
     padding: 0.5em 0.8em;
     border: 3px solid #D9D9D9;
     border-radius: 8px;
     outline: none;
+    height: fit-content;
 }
 
 select:focus, input:focus, textarea:focus {
@@ -71,22 +72,23 @@ textarea {
     margin-top: 24px;
 }
 
-.form-btns button {
+.form-btns button, .denger-btn {
     width: 130px;
     height: 40px;
     border-radius: 8px;
     font-weight: bold;
     cursor: pointer;
+    font-size: 14px;
 }
 
-.form-btns button:nth-child(1) {
+.form-btns button:nth-child(1), .denger-btn {
     background-color: #FD5D5D;
     color: #fff;
     outline: #FD5D5D 2px solid;
     border: 2px #fff solid;
 }
 
-.form-btns button:nth-child(1):hover {
+.form-btns button:nth-child(1):hover, .denger-btn:hover {
     background-color: #ff8b8b;
     outline: #ff8b8b 2px solid;
 }
@@ -103,8 +105,22 @@ textarea {
     outline: #77dce9 2px solid;
 }
 
+p {
+    background-color: #D9D9D9;
+    line-height: 16px;
+    height: fit-content;
+    font-size: 14px;
+}
+
+.denger-btn {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (min-width: 768px) {
-    select, input, textarea, label, .privacy-link {
+    select, input, textarea, label, .privacy-link, p {
         font-size: 16px;
     }
 }
