--- a/css/timetable.css
+++ b/css/timetable.css
@@ -9,6 +9,15 @@ h1 {
     font-weight: bold;
 }
 
+body {
+    font-family: "Noto Sans JP", sans-serif;
+    font-optical-sizing: auto;
+}
+
+.ff-en {
+    font-family: "Poppins", sans-serif;
+}
+
 .flex-col {
     display: flex;
     flex-direction: column;
@@ -103,6 +112,7 @@ h1 {
     display: flex;
     background-color: rgba(168, 209, 235, 0.7);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
