--- a/css/contact.css
+++ b/css/contact.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body {
+    font-family: "Noto Sans JP", sans-serif;
+}
+
 h1 {
     font-size: 32px;
     font-weight: bold;
