--- a/css/guide.css
+++ b/css/guide.css
@@ -104,16 +104,16 @@
     right: 16px;
     background: none;
     border: none;
-    font-size: 28px;
+    font-size: 32px;
     cursor: pointer;
     color: #333;
 }
 
 
-body {
+.gui {
     margin: 0;
-    padding: 65px 30px 0;
-    padding-top: 65px;
+    padding: 64px 30px 0;
+    padding-top: 64px;
     /* fixed header 分 */
     font-family: "Noto Sans JP", sans-serif;
     font-family: "Poppins", sans-serif;
