--- a/css/contact.css
+++ b/css/contact.css
@@ -11,7 +11,7 @@ h1 {
     font-size: 32px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 16px;
+    margin: 80px auto 16px auto;
 }
 
 form, .form-confirm {
@@ -19,7 +19,7 @@ form, .form-confirm {
     flex-direction: column;
     width: 84%;
     max-width: 510px;
-    margin: 0 auto;
+    margin: 0 auto 40px auto;
     gap: 8px;
 }
 
@@ -109,7 +109,7 @@ textarea {
     outline: #77dce9 2px solid;
 }
 
-p {
+form p {
     background-color: #D9D9D9;
     line-height: 16px;
     height: fit-content;
@@ -141,7 +141,7 @@ p {
     width: 80%;
     max-width: 320px;
     padding: 16px 16px;
-    margin: 24px auto;
+    margin: 64px auto;
     font-weight: bold;
     border-radius: 8px;
     font-size: 14px;
@@ -156,6 +156,11 @@ p {
     color: #FD5D5D;
     font-size: 12px;
     margin-left: 8px;
+}
+
+.copyright {
+    background-color: none;
+    border: none;
 }
 
 @media screen and (min-width: 768px) {
