--- a/CSS/all-style.css
+++ b/CSS/all-style.css
@@ -26,6 +26,7 @@ body {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    font-family: "Poppins", sans-serif;
 }
 
 /* ハンバーガーボタン */
