--- a/css/artists.css
+++ b/css/artists.css
@@ -6,7 +6,7 @@ html {
 
 #SAT-artists,
 #SUN-artists {
-    scroll-margin-top: 75px;
+    scroll-margin-top: 120px;
 }
 
 body {
@@ -25,6 +25,7 @@ h2 {
 .text-center {
     text-align: center;
     color: #00b0c7;
+    margin-top: 100px;
 }
 
 .event-date {
@@ -34,7 +35,7 @@ h2 {
     /* 幅を最大に */
     background-color: #ffe0c1;
     position: sticky;
-    top: 0;
+    top: 60px;
 }
 
 .event-date a {
