--- a/css/privacy.css
+++ b/css/privacy.css
@@ -60,3 +60,12 @@ body {
     font-size: 0.9rem;
     font-family: "Poppins", sans-serif;
 }
+
+.body {
+  font-family: "Noto Sans JP", sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+.site-title {
+    font-family: "Poppins", sans-serif;
+}
